responsive home screen, center latest element on explore ideas page

--- a/Sparc2/Sparc2/Ideas/IdeaCard.razor
+++ b/Sparc2/Sparc2/Ideas/IdeaCard.razor
@@ -1,4 +1,4 @@
-﻿<div class="card" @onclick='() => OpenIdeaModal("")' @onclick:stopPropagation=true>
+﻿<div class="card" id='idea-@Idea.Id' @onclick='() => OpenIdeaModal("")' @onclick:stopPropagation=true>
     <header>
         <img src="images/user-stock.png" />
         <div>
