--- a/Sparc2/Sparc2/Ideas/IdeaCard.razor.scss
+++ b/Sparc2/Sparc2/Ideas/IdeaCard.razor.scss
@@ -7,6 +7,10 @@
     box-shadow: 4px 4px 16px 0px rgba(63, 24, 5, 0.25);
     cursor: pointer;
 
+    &.highlight {
+        animation: highlight 7s ease-in-out;
+    }
+
     header {
         display: flex;
         flex-direction: row;
@@ -70,7 +74,7 @@
 
                 img {
                     display: block;
-                    width: 100%;                    
+                    width: 100%;
                 }
             }
 
@@ -206,5 +210,20 @@
 
     100% {
         opacity: 1;
+    }
+}
+
+@keyframes highlight {
+    0% {
+        box-shadow: none;
+    }
+
+    25% {
+        //box-shadow: 0 0 40px 5px rgba(198, 151, 252, 1);
+        box-shadow: 0 0 40px 5px rgba(254, 238, 205, 1);
+    }
+
+    100% {
+        box-shadow: none;
     }
 }
