--- a/Sparc2/Sparc2/Shared/NavMenu.razor.scss
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.scss
@@ -157,7 +157,7 @@
     }
 }
 
-@media only screen and (max-width: 874px) {
+@media only screen and (max-width: 874px), (orientation: portrait) {
     .other-nav {
         width: calc(100% - 64px);
         margin: 16px;
@@ -181,5 +181,19 @@
                 width: 100%;
             }
         }
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    nav {
+        width: calc(100% - 120px);
+        margin: 32px 60px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    nav {
+        width: calc(100% - 32px);
+        margin: 16px
     }
 }
