--- a/Sparc2/Sparc2/Shared/Components/AddCard.razor
+++ b/Sparc2/Sparc2/Shared/Components/AddCard.razor
@@ -25,8 +25,6 @@
     </footer>
 </div>
 
-@inject Sparc2.Ideas.IdeaService IdeaService
-
 @code {
     [Parameter] public EventCallback<bool> OnClose { get; set; }
     [Parameter] public int SelectedHeaderButton { get; set; }
@@ -88,7 +86,7 @@
     private async Task SubmitIdea()
     {
         await Api.ProjectIdeas.Create(Idea.Title, Idea.Author, Idea.Description, Idea.FileUrls);
-        IdeaService.AddIdea(Idea);
+        IdeaService.AddIdea();
         await OnClose.InvokeAsync(true);
     }
 
