add delay to js function to center element

--- a/Sparc2/Sparc2/Ideas/IdeasPage.razor
+++ b/Sparc2/Sparc2/Ideas/IdeasPage.razor
@@ -55,6 +55,7 @@
     {
         if (ShouldScrollToLatest && LatestIdea != null)
         {
+            await Task.Delay(1000);
             await Js.InvokeVoidAsync("scrollToElement", "idea-" + LatestIdea.Id);
             ShouldScrollToLatest = false; 
         }
