--- a/Sparc2/Sparc2/Index.razor.css
+++ b/Sparc2/Sparc2/Index.razor.css
@@ -122,14 +122,14 @@ section #scroll-text ::deep svg path {
   }
   section .hero #mosaic-container {
     position: absolute;
-    top: 75%;
-    left: 50%;
-    transform: translate(-50%, -75%);
     width: 100% !important;
+    height: 100%;
+    margin: 0;
     z-index: 10;
   }
   section .hero #mosaic-container #mosaic {
     margin: 0;
+    margin-top: 15%;
   }
   section #scroll-text {
     bottom: 24px;
@@ -144,6 +144,14 @@ section #scroll-text ::deep svg path {
   section .hero #hero-text {
     font-size: 4.2rem;
   }
+  section .hero #mosaic-container {
+    width: calc(100% + 64px) !important;
+    margin: 0 -32px;
+  }
+  section .hero #mosaic-container #mosaic {
+    margin: 0;
+    margin-top: 15%;
+  }
 }
 @media only screen and (max-width: 500px) {
   section .hero {
@@ -153,9 +161,9 @@ section #scroll-text ::deep svg path {
   section .hero #hero-text {
     top: 40px;
   }
-  section .hero #mosaic-container {
-    width: calc(100% + 64px) !important;
+  section .hero #mosaic-container #mosaic {
     margin: 0;
+    margin-top: 25%;
   }
 }
 
