responsive updates with new specs

--- a/Sparc2/Sparc2/Index.razor
+++ b/Sparc2/Sparc2/Index.razor
@@ -5,7 +5,13 @@
 <section id="home">
     <div class="hero">
         <div id="hero-text">
-            <h1>Striving for a world where startups are owned by those who built it <button id="enter-btn"><ArrowRightIcon /></button></h1>        
+            <h1>
+                Striving for a world where startups are owned by those who built it 
+                <button id="enter-btn">
+                    <ArrowRightIcon />
+                    <ArrowDownIcon />
+                </button>
+            </h1>
         </div>
         <div id="mosaic-container">
             <img src="images/LogoMosaic-withbackground.png" id="mosaic" />
@@ -13,6 +19,6 @@
     </div>
     <div id="scroll-text">
         <p>scroll down, click, or press enter to explore ideas</p>
-        <ArrowLeftIcon />
+        @* <ArrowLeftIcon /> *@
     </div>
 </section>
