--- a/Sparc2/Sparc2/Index.razor.css
+++ b/Sparc2/Sparc2/Index.razor.css
@@ -19,7 +19,6 @@ section .hero #hero-text {
   justify-content: start;
   align-items: center;
   width: 50%;
-  max-width: 750px;
   animation: fadeIn 3s ease-in-out;
 }
 section .hero #hero-text h1 {
@@ -32,6 +31,12 @@ section .hero #hero-text h1 button {
   background: none;
   cursor: pointer;
   border: 1px solid transparent;
+}
+section .hero #hero-text h1 button ::deep svg:first-child {
+  animation: bounceHorizontal 2s infinite;
+}
+section .hero #hero-text h1 button ::deep svg:last-child {
+  display: none;
 }
 section .hero #hero-text.faded {
   background: -webkit-linear-gradient(#FF5A08, #3F256B);
@@ -76,94 +81,111 @@ section #scroll-text ::deep svg {
   width: 14px;
   height: 14px;
   transform: rotate(-90deg);
-  animation: bounce 2s infinite;
+  animation: bounceVertical 2s infinite;
 }
 section #scroll-text ::deep svg path {
   stroke: var(--purple-800);
 }
-@media only screen and (max-width: 1403px) {
+@media only screen and (max-width: 1536px) {
   section .hero #hero-text h1 {
-    font-size: 6.4rem !important;
+    font-size: 7.2rem;
   }
 }
-@media only screen and (max-width: 1048px) {
-  section .hero #hero-text {
-    width: 40% !important;
-  }
+@media only screen and (max-width: 1280px) {
   section .hero #hero-text h1 {
-    font-size: 5.2rem !important;
-  }
-  section .hero #mosaic-container {
-    width: 60% !important;
+    font-size: 6.2rem;
   }
 }
-@media only screen and (max-width: 874px) {
-  section .hero #hero-text h1 {
-    font-size: 4.8rem !important;
-  }
-}
-@media only screen and (max-width: 819px), (orientation: portrait) {
+@media only screen and (max-width: 1024px), (orientation: portrait) {
   section .hero {
-    display: block !important;
-    height: calc(100% - 100px);
-    margin-top: 100px;
-    position: relative;
-  }
-  section .hero #hero-text {
-    width: 100% !important;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 20;
-  }
-  section .hero #hero-text ::deep svg {
-    height: 48px;
-    width: auto;
-  }
-  section .hero #mosaic-container {
-    position: absolute;
-    width: 100% !important;
-    height: 100%;
-    margin: 0;
-    z-index: 10;
-  }
-  section .hero #mosaic-container #mosaic {
-    margin: 0;
-    margin-top: 15%;
-  }
-  section #scroll-text {
-    bottom: 24px;
-  }
-}
-@media only screen and (max-width: 700px) {
-  section .hero {
+    flex-direction: column;
+    gap: 16px;
+    height: calc(100% - 35px);
     width: calc(100% - 120px);
     margin: 0 60px;
     margin-top: 100px;
   }
   section .hero #hero-text {
-    font-size: 4.2rem;
+    width: 100%;
+  }
+  section .hero #hero-text h1 {
+    display: flex;
+    flex-direction: column;
+    font-size: 5.2rem;
+    text-align: center;
+  }
+  section .hero #hero-text h1 button {
+    margin: 0 auto;
+  }
+  section .hero #hero-text h1 button ::deep svg:first-child {
+    display: none;
+  }
+  section .hero #hero-text h1 button ::deep svg:last-child {
+    display: block;
+    animation: bounceVertical 3s infinite;
+  }
+  section .hero #hero-text ::deep svg:first-child {
+    height: 48px;
+    width: auto;
   }
   section .hero #mosaic-container {
-    width: calc(100% + 64px) !important;
-    margin: 0 -32px;
+    height: 60% !important;
+    width: auto;
+    aspect-ratio: 1/1;
+    margin: 0;
   }
   section .hero #mosaic-container #mosaic {
-    margin: 0;
-    margin-top: 15%;
+    height: 100%;
+    max-width: 100%;
+    aspect-ratio: 1/1;
+    margin: 0 auto;
+  }
+  section #scroll-text {
+    display: none;
+  }
+}
+@media only screen and (max-width: 800px), (max-height: 800px) {
+  section .hero {
+    width: calc(100% - 120px);
+    margin: 0 60px;
+    margin-top: 100px;
+  }
+  section .hero #hero-text h1 {
+    font-size: 4.8rem;
+  }
+  section .hero #mosaic-container {
+    height: 50% !important;
   }
 }
 @media only screen and (max-width: 500px) {
   section .hero {
     width: calc(100% - 64px);
     margin: 0 32px;
+    margin-top: 100px;
   }
   section .hero #hero-text {
     top: 40px;
+    font-size: 5.2rem;
+    text-align: center;
   }
-  section .hero #mosaic-container #mosaic {
-    margin: 0;
-    margin-top: 25%;
+  section .hero #hero-text h1 {
+    display: flex;
+    flex-direction: column;
+  }
+  section .hero #hero-text h1 button {
+    margin: 0 auto;
+  }
+  section .hero #hero-text h1 button ::deep svg:first-child {
+    display: none;
+  }
+  section .hero #hero-text h1 button ::deep svg:last-child {
+    display: block;
+    animation: bounce 2s infinite;
+  }
+}
+@media only screen and (max-width: 430px) {
+  section .hero #hero-text h1 {
+    font-size: 4.2rem !important;
   }
 }
 
@@ -189,14 +211,25 @@ section #scroll-text ::deep svg path {
     transform: scale(1);
   }
 }
-@keyframes bounce {
+@keyframes bounceVertical {
   0%, 20%, 50%, 80%, 100% {
-    transform: translateY(0) rotate(-90deg);
+    transform: translateY(0);
   }
   40% {
-    transform: translateY(8px) rotate(-90deg);
+    transform: translateY(8px);
   }
   60% {
-    transform: translateY(4px) rotate(-90deg);
+    transform: translateY(4px);
+  }
+}
+@keyframes bounceHorizontal {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateX(0);
+  }
+  40% {
+    transform: translateX(16px);
+  }
+  60% {
+    transform: translateX(8px);
   }
 }
