--- a/Sparc2/Sparc2/Index.razor.scss
+++ b/Sparc2/Sparc2/Index.razor.scss
@@ -19,7 +19,6 @@
             justify-content: start;
             align-items: center;
             width: 50%;
-            max-width: 750px;
             animation: fadeIn 3s ease-in-out;
 
             h1 {
@@ -32,6 +31,14 @@
                     background: none;
                     cursor: pointer;
                     border: 1px solid transparent;
+
+                    ::deep svg:first-child {
+                        animation: bounceHorizontal 2s infinite;
+                    }
+
+                    ::deep svg:last-child {
+                        display: none;
+                    }
                 }
             }
 
@@ -84,7 +91,7 @@
             width: 14px;
             height: 14px;
             transform: rotate(-90deg);
-            animation: bounce 2s infinite;
+            animation: bounceVertical 2s infinite;
 
             path {
                 stroke: var(--purple-800);
@@ -92,99 +99,98 @@
         }
     }
 
-    @media only screen and (max-width: 1403px) {
+    @media only screen and (max-width: 1536px) {
         .hero {
             #hero-text {
                 h1 {
-                    font-size: 6.4rem !important
+                    font-size: 7.2rem;
                 }
             }
         }
     }
 
-    @media only screen and (max-width: 1048px) {
-        .hero {
-            #hero-text {
-                width: 40% !important;
-
-                h1 {
-                    font-size: 5.2rem !important;
-                }
-            }
-
-            #mosaic-container {
-                width: 60% !important;
-            }
-        }
-    }
-
-    @media only screen and (max-width: 874px) {
+    @media only screen and (max-width: 1280px) {
         .hero {
             #hero-text {
                 h1 {
-                    font-size: 4.8rem !important;
+                    font-size: 6.2rem;
                 }
             }
         }
     }
 
-    @media only screen and (max-width: 819px), (orientation: portrait) {
+    @media only screen and (max-width: 1024px), (orientation: portrait) {
         .hero {
-            display: block !important;
-            height: calc(100% - 100px);
+            flex-direction: column;
+            gap: 16px;
+            height: calc(100% - 35px);
+            width: calc(100% - 120px);
+            margin: 0 60px;
             margin-top: 100px;
-            position: relative;
 
             #hero-text {
-                width: 100% !important;
-                position: absolute;
-                top: 0;
-                left: 0;
-                z-index: 20;
+                width: 100%;
 
-                ::deep svg {
+                h1 {
+                    display: flex;
+                    flex-direction: column;
+                    font-size: 5.2rem;
+                    text-align: center;
+
+                    button {
+                        margin: 0 auto;
+
+                        ::deep svg:first-child {
+                            display: none;
+                        }
+
+                        ::deep svg:last-child {
+                            display: block;
+                            animation: bounceVertical 3s infinite;
+                        }
+                    }
+                }
+
+                ::deep svg:first-child {
                     height: 48px;
                     width: auto;
                 }
             }
 
             #mosaic-container {
-                position: absolute;
-                width: 100% !important;
-                height: 100%;
+                height: 60% !important;
+                width: auto;
+                aspect-ratio: 1 / 1;
                 margin: 0;
-                z-index: 10;
 
                 #mosaic {
-                    margin: 0;
-                    margin-top: 15%;
+                    height: 100%;
+                    max-width: 100%;
+                    aspect-ratio: 1 / 1;
+                    margin: 0 auto;
                 }
             }
         }
 
         #scroll-text {
-            bottom: 24px;
+            display: none;
         }
     }
 
-    @media only screen and (max-width: 700px) {
+    @media only screen and (max-width: 800px), (max-height: 800px) {
         .hero {
             width: calc(100% - 120px);
             margin: 0 60px;
             margin-top: 100px;
 
             #hero-text {
-                font-size: 4.2rem;
+                h1 {
+                    font-size: 4.8rem;
+                }
             }
 
             #mosaic-container {
-                width: calc(100% + 64px) !important;
-                margin: 0 -32px;
-
-                #mosaic {
-                    margin: 0;
-                    margin-top: 15%;
-                }
+                height: 50% !important;
             }
         }
     }
@@ -193,15 +199,39 @@
         .hero {
             width: calc(100% - 64px);
             margin: 0 32px;
+            margin-top: 100px;
 
             #hero-text {
                 top: 40px;
-            }
+                font-size: 5.2rem;
+                text-align: center;
 
-            #mosaic-container {
-                #mosaic {
-                    margin: 0;
-                    margin-top: 25%;
+                h1 {
+                    display: flex;
+                    flex-direction: column;
+
+                    button {
+                        margin: 0 auto;
+
+                        ::deep svg:first-child {
+                            display: none;
+                        }
+
+                        ::deep svg:last-child {
+                            display: block;
+                            animation: bounce 2s infinite;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    @media only screen and (max-width: 430px) {
+        .hero {
+            #hero-text {
+                h1 {
+                    font-size: 4.2rem !important;
                 }
             }
         }
@@ -234,16 +264,30 @@
     }
 }
 
-@keyframes bounce {
+@keyframes bounceVertical {
     0%, 20%, 50%, 80%, 100% {
-        transform: translateY(0) rotate(-90deg);
+        transform: translateY(0);
     }
 
     40% {
-        transform: translateY(8px) rotate(-90deg);
+        transform: translateY(8px);
     }
 
     60% {
-        transform: translateY(4px) rotate(-90deg);
+        transform: translateY(4px);
+    }
+}
+
+@keyframes bounceHorizontal {
+    0%, 20%, 50%, 80%, 100% {
+        transform: translateX(0);
+    }
+
+    40% {
+        transform: translateX(16px);
+    }
+
+    60% {
+        transform: translateX(8px);
     }
 }
