--- a/Sparc2/Sparc2/Shared/NavMenu.razor.scss
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.scss
@@ -4,7 +4,8 @@
     top: 0;
     left: 0;
     z-index: 100;
-    margin: 32px 100px;
+    padding: 32px 100px;
+    background: var(--white);
 
     .container {
         display: flex;
