--- a/Sparc2/Sparc2/Shared/Components/Breadcrumbs.razor.css
+++ b/Sparc2/Sparc2/Shared/Components/Breadcrumbs.razor.css
@@ -23,3 +23,9 @@
 .breadcrumb-item.active {
   pointer-events: none;
 }
+
+@media (min-width: 375px) and (max-width: 766px) {
+  .breadcrumb {
+    font-size: 16px;
+  }
+}
