--- a/Sparc2/Sparc2/Pages/KoriReferral.razor.css
+++ b/Sparc2/Sparc2/Pages/KoriReferral.razor.css
@@ -2,12 +2,6 @@
   padding: 99px 100px 0;
   display: flex;
   flex-direction: column;
-  /*.hero {
-      width: calc(100% - 200px);
-      margin: 0 100px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;*/
 }
 section .line {
   height: 1px;
@@ -206,4 +200,245 @@ section .terms a {
 }
 section .terms a:hover {
   color: var(--gray-600);
+}
+
+@media (min-width: 767px) and (max-width: 1024px) {
+  section {
+    padding: 80px 32px 0;
+  }
+  section header h1 {
+    font-size: 44px;
+  }
+  section .landing .landing-text {
+    position: relative;
+    width: 39%;
+  }
+  section .landing .landing-text h2 {
+    position: relative;
+    width: 49vw;
+    max-width: none;
+  }
+  section .cta {
+    align-items: center;
+  }
+  section .how-it-works {
+    padding: 17px 0 16px 0;
+  }
+  section .how-it-works h3 {
+    margin-bottom: 51px;
+  }
+  section .how-it-works .articles {
+    padding-top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+  section .kori-updates {
+    padding: 100px 0;
+  }
+  section .terms {
+    margin-bottom: 47px;
+  }
+}
+@media (min-width: 1024px) and (max-width: 1096px) {
+  section .landing .landing-text {
+    position: relative;
+    width: 39%;
+  }
+  section .landing .landing-text h2 {
+    position: relative;
+    width: 49vw;
+    max-width: none;
+  }
+}
+@media (min-width: 430px) and (max-width: 766px) {
+  section {
+    padding: 97px 16px 0 16px;
+  }
+  section header {
+    padding: 70px 0 46px 0;
+  }
+  section header h1 {
+    font-size: 24px;
+  }
+  section .landing {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  section .landing .landing-text {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  section .landing .landing-text h2 {
+    font-size: 23px;
+    align-self: center;
+  }
+  section .landing .landing-text section h3 {
+    font-size: 22px;
+  }
+  section .landing .landing-text section p {
+    font-size: 16px;
+  }
+  section .landing ::deep svg {
+    height: 313px;
+  }
+  section .cta {
+    padding: 31px 0 0 0;
+    align-items: center;
+  }
+  section .cta small {
+    font-size: 16px;
+    background: linear-gradient(90deg, #C596FB 0%, #FF5A08 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  section .how-it-works {
+    padding: 46px 0;
+  }
+  section .how-it-works h3 {
+    font-size: 22px;
+    margin-bottom: 30px;
+  }
+  section .how-it-works .articles {
+    padding-top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+  section .how-it-works .articles article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 5px 0 20px;
+    height: auto;
+  }
+  section .how-it-works .articles article div {
+    width: 100%;
+  }
+  section .kori-updates {
+    padding: 50px 0;
+  }
+  section .kori-updates div h3 {
+    font-size: 22px;
+  }
+  section .kori-updates div p, section .kori-updates div a {
+    font-size: 16px;
+  }
+  section .faq {
+    padding: 50px 0 30px 0;
+  }
+  section .faq h3 {
+    font-size: 22px;
+  }
+  section .faq p {
+    font-size: 16px;
+    padding-bottom: 0;
+  }
+  section .terms {
+    margin-bottom: 25px;
+    font-size: 16px;
+    flex-wrap: wrap;
+  }
+}
+@media (min-width: 375px) and (max-width: 429px) {
+  section {
+    padding: 97px 16px 0 16px;
+  }
+  section header {
+    padding: 50px 0 46px 0;
+  }
+  section header h1 {
+    font-size: 21px;
+  }
+  section .landing {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  section .landing .landing-text {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  section .landing .landing-text h2 {
+    font-size: 23px;
+    align-self: center;
+  }
+  section .landing .landing-text section h3 {
+    font-size: 22px;
+  }
+  section .landing .landing-text section p {
+    font-size: 16px;
+  }
+  section .landing ::deep svg {
+    height: 286px;
+  }
+  section .cta {
+    padding: 31px 0 0 0;
+    align-items: center;
+    gap: 15px;
+  }
+  section .cta small {
+    font-size: 16px;
+    background: linear-gradient(90deg, #C596FB 0%, #FF5A08 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  section .cta button {
+    width: 345px;
+  }
+  section .how-it-works {
+    padding: 46px 0;
+  }
+  section .how-it-works h3 {
+    font-size: 22px;
+    margin-bottom: 30px;
+  }
+  section .how-it-works .articles {
+    padding-top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+  section .how-it-works .articles article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 5px 0 20px;
+    height: auto;
+  }
+  section .how-it-works .articles article div {
+    width: 100%;
+  }
+  section .kori-updates {
+    padding: 50px 0;
+  }
+  section .kori-updates div h3 {
+    font-size: 22px;
+  }
+  section .kori-updates div p, section .kori-updates div a {
+    font-size: 16px;
+  }
+  section .faq {
+    padding: 50px 0 30px 0;
+  }
+  section .faq h3 {
+    font-size: 22px;
+  }
+  section .faq p {
+    font-size: 16px;
+    padding-bottom: 0;
+  }
+  section .terms {
+    margin-bottom: 25px;
+    font-size: 16px;
+    flex-wrap: wrap;
+  }
 }
