--- a/Sparc2/Sparc2/Shared/Components/FaqItem.razor.css
+++ b/Sparc2/Sparc2/Shared/Components/FaqItem.razor.css
@@ -6,6 +6,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 25px 0;
+  gap: 25px;
 }
 .faq-item .faq-header h3 {
   margin: 0;
@@ -25,4 +26,18 @@
 }
 .faq-item .faq-body {
   font-size: 20px;
+}
+
+@media (min-width: 375px) and (max-width: 766px) {
+  .faq-item .faq-header h3 {
+    font-size: 20px;
+  }
+  .faq-item .faq-header .toggle-button {
+    width: 38px;
+    height: 38px;
+  }
+  .faq-item .faq-header .toggle-button ::deep svg {
+    width: 38px;
+    height: 38px;
+  }
 }
