--- a/Sparc2/Sparc2/Shared/Components/FaqItem.razor.scss
+++ b/Sparc2/Sparc2/Shared/Components/FaqItem.razor.scss
@@ -8,6 +8,7 @@
         justify-content: space-between;
         align-items: center;
         padding: 25px 0;
+        gap: 25px;
 
         h3 {
             margin: 0;
@@ -31,5 +32,23 @@
 
     .faq-body {
         font-size: 20px;
+    }
+}
+
+@media (min-width: 375px) and (max-width: 766px) {
+    .faq-item .faq-header {
+        h3 {
+            font-size: 20px;
+        }
+
+        .toggle-button {
+            width: 38px;
+            height: 38px;
+
+            ::deep svg {
+                width: 38px;
+                height: 38px;
+            }
+        }
     }
 }
