--- a/Sparc2/Sparc2/Shared/NavMenu.razor.css
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.css
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   z-index: 100;
-  padding: 32px 100px;
+  margin: 32px 100px;
   background: var(--white);
 }
 nav .container {
@@ -129,6 +129,11 @@ nav button ::deep svg path {
   opacity: 0.5;
 }
 
+.home-nav {
+  margin: 0;
+  padding: 32px 100px;
+}
+
 @media only screen and (max-width: 1024px), (orientation: portrait) {
   .other-nav {
     width: calc(100% - 64px);
@@ -163,5 +168,17 @@ nav button ::deep svg path {
   nav {
     width: calc(100% - 32px);
     margin: 16px;
+  }
+}
+@media (min-width: 767px) and (max-width: 1024px) {
+  .home-nav {
+    width: calc(100vw - 64px);
+    padding: 32px 32px 12px 32px;
+  }
+}
+@media (min-width: 375px) and (max-width: 766px) {
+  .home-nav {
+    width: calc(100vw - 32px);
+    padding: 42px 16px 16px 16px;
   }
 }
