--- a/Sparc2/Sparc2/Shared/NavMenu.razor.scss
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor.scss
@@ -4,7 +4,7 @@
     top: 0;
     left: 0;
     z-index: 100;
-    padding: 32px 100px;
+    margin: 32px 100px;
     background: var(--white);
 
     .container {
@@ -158,6 +158,11 @@
     }
 }
 
+.home-nav {
+    margin: 0;
+    padding: 32px 100px;
+}
+
 @media only screen and (max-width: 1024px), (orientation: portrait) {
     .other-nav {
         width: calc(100% - 64px);
@@ -196,5 +201,19 @@
     nav {
         width: calc(100% - 32px);
         margin: 16px
+    }
+}
+
+@media (min-width: 767px) and (max-width: 1024px) {
+    .home-nav {
+        width: calc(100vw - 64px);
+        padding: 32px 32px 12px 32px;
+    }
+}
+
+@media (min-width: 375px) and (max-width: 766px) {
+    .home-nav {
+        width: calc(100vw - 32px);
+        padding: 42px 16px 16px 16px;        
     }
 }
