Added Authentication to Sparc V2 & Added logout method

--- a/Sparc2/Sparc2/Shared/NavMenu.razor
+++ b/Sparc2/Sparc2/Shared/NavMenu.razor
@@ -19,6 +19,7 @@
                 <SparcLogo />
             </div>
             <div class="right">
+                <Auth />
                 <button id="ideas-btn" class="secondary-btn">Ideas</button>
             </div>
         }
