--- a/Sparc2/Sparc2/Shared/Components/Auth.razor
+++ b/Sparc2/Sparc2/Shared/Components/Auth.razor
@@ -100,7 +100,7 @@
     {
         if (firstRender)
         {
-            await JS.InvokeVoidAsync("init", ApiKey);
+            await JS.InvokeVoidAsync("initBlossomCloudAuthenticator", ApiKey);
             await FetchUserInfo();
         }
     }
