Adjust responsiveness of Kori button/link on referral page

--- a/Sparc2/Sparc2/Pages/KoriReferral.razor.scss
+++ b/Sparc2/Sparc2/Pages/KoriReferral.razor.scss
@@ -398,6 +398,11 @@
             padding: 31px 0 0 0;
             align-items: center;
 
+            h4 {
+                font-size: 20px;
+                text-align: center;
+            }
+
             small {
                 font-size: 16px;
                 background: linear-gradient(90deg, #C596FB 0%, #FF5A08 100%);
@@ -518,6 +523,11 @@
             padding: 31px 0 0 0;
             align-items: center;
             gap: 15px;
+
+            h4 {
+                font-size: 20px;
+                text-align: center;
+            }
 
             small {
                 font-size: 16px;
