--- a/Sparc2/Sparc2/Pages/KoriReferral.razor.css
+++ b/Sparc2/Sparc2/Pages/KoriReferral.razor.css
@@ -328,6 +328,10 @@ section .terms a:hover {
     padding: 31px 0 0 0;
     align-items: center;
   }
+  section .cta h4 {
+    font-size: 20px;
+    text-align: center;
+  }
   section .cta small {
     font-size: 16px;
     background: linear-gradient(90deg, #C596FB 0%, #FF5A08 100%);
@@ -421,6 +425,10 @@ section .terms a:hover {
     padding: 31px 0 0 0;
     align-items: center;
     gap: 15px;
+  }
+  section .cta h4 {
+    font-size: 20px;
+    text-align: center;
   }
   section .cta small {
     font-size: 16px;
