Blossom just needs to be a Razor Class Library???

--- a/Sparc2/Sparc2/Html.razor
+++ b/Sparc2/Sparc2/Html.razor
@@ -8,12 +8,11 @@
     <link rel="stylesheet" href="@Assets["Sparc2.styles.css"]" />
     <link rel="icon" href="images/Logo.svg" sizes="any" type="image/svg+xml" />
     <link rel="stylesheet" href="https://use.typekit.net/mur1cay.css">
-    <ImportMap />
     
-    <HeadOutlet @rendermode="InteractiveServer" />
+    <HeadOutlet />
 </head>
 <body>
-    <Sparc.Blossom.BlossomApp Program="Program" DefaultLayout="MainLayout" @rendermode="new InteractiveServerRenderMode(false)" />
+    <Sparc.Blossom.BlossomApp Program="Program" DefaultLayout="MainLayout"  />
 
     <script src="_framework/blazor.web.js"></script>
     <script src="js/dragging.js"></script>
